@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-07-28T00:39:42Z",
-  "count_outdated" : 86,
-  "uniques_outdated" : 27,
+  "timestamp" : "2022-07-29T16:09:10Z",
+  "count_outdated" : 87,
+  "uniques_outdated" : 28,
   "count" : 99,
   "uniques" : 30,
   "views" : [
-    {
-      "timestamp": "2022-07-15T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-07-18T00:00:00Z",
       "count": 4,
